serviceregistry/registry-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: apicurio-registry
  name: apicurio-registry.apps.5.9.49.249.xip.io
  namespace: apicurio
spec:
  host: apicurio-registry.apps.5.9.49.249.xip.io
  port:
    targetPort: port-1
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: apicurio-registry
    weight: 100
  wildcardPolicy: None
